feat(product): 新增产品线管理功能
- 添加产品线管理相关的控制器、服务和数据对象
- 实现产品线树形结构展示、分页查询、创建、更新和删除功能
- 在元数据中增加产品线和用户信息数据
- 优化应用创建和修改接口，将"所属产品线"改为"产品线"
- 移除冗余注释和无用代码